[package]
name = "thumbrs"
version = "0.1.0"
authors = ["Thorben Kroeger <thorbenkroeger@gmail.com>"]
build = "build.rs"

[features]
default = ["serde_codegen"]
nightly = ["serde_macros"]

[dependencies]
chrono = { version = "^0.2.17", default-features = false, features = ["serde"] }
docopt = "^0.6.82"
filetime = "^0.1.10"
image = "^0.10.3"
libc = "^0.2"
log = "*"
mozjpeg-sys = "^0.3.2"
num-rational = {version = "^0.1.35", default-features = false, features=["serde"] }
num = {version = "^0.1.30", default-features = false, features=["num-rational"]}
rexiv2 = "^0.4.0"
rustc-serialize = "*"
serde = "^0.8"
serde_json = "^0.8"
serde_macros = { version = "^0.8", optional = true }
sha1 = "^0.2.0"
walkdir = "^0.1.5"

# Note:
# Compiles mozjpeg, need to do at least
#
# sudo apt-get install nasm dh-autoreconf


[build-dependencies]
serde_codegen = { version = "^0.8", optional = true }
